# experiments

./: .gitignore  CMakeLists.txt  README.md  fs.glsl  main.cpp  vs.glsl
abstr/: Shader.cpp  Shader.h  VAO.cpp  VAO.h
abstr/buffer/: VBO.cpp
abstr/databuffer/: Data.cpp  Data.h  VAO.cpp  VAO.h  VBO.h
abstr/glsl/: Shader.cpp  Shader.h
functions/: camera.cpp  camera.h  functions.cpp  functions.h
mandelbrot/: README.md  fs.glsl  main.cpp  main.h  vs.glsl
projects/diffusion/: README.md  fs.glsl  main.cpp  main.h  vs.glsl
projects/jpeg/: fs.glsl  main.cpp  main.h  vs.glsl
projects/mandelbrot/: README.md  fs.glsl  main.cpp  main.h
projects/mandelbulb/: fs.glsl  main.cpp  main.h  vs.glsl
projects/ray/: README.md  Raycaster.cpp  Raycaster.h  Visible.cpp  Visible.h  fs.glsl  main.cpp  main.h  mesh.cpp  mesh.h  ray_fs.glsl  ray_vs.glsl  structs.h  vs.glsl
projects/rubiks/: fs.glsl  main.cpp  main.h  vs.glsl
projects/soft/: fs.glsl  main.cpp  main.h  mesh.h  vs.glsl
projects/voxe/: README.md  fs.glsl  gs.glsl  main.cpp  main.h  noise.cpp  noise.h  voxel.cpp  voxel.h  vs.glsl
